--- a/views/products/show.ejs
+++ b/views/products/show.ejs
@@ -8,6 +8,11 @@
 <body>
     <h1><%= product.name %></h1>
     <ul>Price = <%= product.price %></ul>
-    <ul>Category = <%= product.category %></ul>
+    <ul>Category = <a href="/products?category=<%= product.category %>"><%= product.category %></a></ul>
+    <form action="/products/<%= product._id %>?_method=DELETE" method="POST">
+        <button>Delete</button>
+    </form>
+    <a href="/products">Go back to all products</a>
+    <a href="/products/<%= product.id %>/edit">Edit Product</a>
 </body>
 </html>
