--- a/views/products/new.ejs
+++ b/views/products/new.ejs
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Add a product</h1>
-    <form action="/products" method="post">
+    <form action="/farms/<%= id %>/products" method="post">
         <label for="name">Name of Product</label>
         <input type="text" id="name" name="name">
         <label for="price">Price</label>
